--- a/team-chart-service/package.json
+++ b/team-chart-service/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node dist/index.js",
-    "dev": "ts-node-dev src/index.ts",
-    "test": "jest",
+    "dev": "nodemon -r dotenv/config src/index.ts",
+    "test": "dotenv -e .env.test jest --detectOpenHandles",
     "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\""
   },
   "keywords": [],
@@ -14,20 +14,24 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "dotenv-cli": "^7.3.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.3.0",
-    "ts-node-dev": "^2.0.0"
+    "mongoose": "^8.0.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.11.5",
     "@types/supertest": "^6.0.2",
     "dotenv": "^16.3.1",
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.1.5",
+    "nodemon": "^3.0.3",
     "prettier": "^3.2.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
@@ -42,7 +46,6 @@
       "dotenv/config"
     ]
   },
-  "type": "module",
   "extends": [
     "tslint:recommended",
     "tslint-config-prettier"
