--- a/team-chart-service/tsconfig.json
+++ b/team-chart-service/tsconfig.json
@@ -2,9 +2,10 @@
   "compilerOptions": {
     "target": "ES6",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     /* Modules */
-    "module": "ESNext",                                /* Specify what module code is generated. */
+    // "module": "ES6",  
+    "module": "CommonJS",                              /* Specify what module code is generated. */
     "rootDir": "./src",                                  /* Specify the root folder within your source files. */
-    "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
+    "moduleResolution": "node",                     /* Specify how TypeScript looks up a file from a given module specifier. */
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     // "paths": {"*": ["src/*"]},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
@@ -21,8 +22,9 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "src/**/*.ts"],
+    "src/**/*.ts", "tests/**/*.ts"],
   "exclude": [
     "node_modules"
   ],
+  // "type": "module",
 }
