--- a/team-chart-service/package.json
+++ b/team-chart-service/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv-cli": "^7.3.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
