--- a/team-chart-service/package.json
+++ b/team-chart-service/package.json
@@ -21,15 +21,18 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.4"
+    "mongoose": "^8.0.4",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.5",
     "@types/supertest": "^6.0.2",
+    "@types/ws": "^8.5.10",
     "dotenv": "^16.3.1",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^9.1.5",
