--- a/website/package.json
+++ b/website/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.5",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "prettier": "^3.2.4",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
